# tur_ws

./: .env  .gitignore  .gitmodules  README.md  build.sh  frames_2023-09-08_17.56.38.gv  frames_2023-09-09_18.45.27.gv  setup.sh  test.sh  ws_build.sh  ws_setup.sh
.devcontainer/: Dockerfile  devcontainer.json  repos_to_submodules.py
.github/: dependabot.yml
.github/actions/lint/: action.yml  run.sh
.github/actions/test/: action.yml  run.sh
.github/workflows/: docs.yaml  ros.yaml
src/: ros2.repos
src/multiple_orca/: CMakeLists.txt  README.md  package.xml  setup.bash
src/multiple_orca/cfg/: multiple_orca.rviz  nav2_namespaced_view.rviz  rov1_bridge.yaml  rov2_bridge.yaml  rov3_bridge.yaml  sim_launch.rviz  tur1_bridge.yaml
src/multiple_orca/launch/: bringup.py  multi_sim_launch.py  navigation_launch.py  rviz_launch.py  sim_launch.py  start_gz_sim.launch.py
src/multiple_orca/models/rov1/: model.config  model.sdf
src/multiple_orca/models/rov2/: model.config  model.sdf
src/multiple_orca/models/rov3/: model.config  model.sdf
src/multiple_orca/models/tur1/: model.config
src/multiple_orca/models_test/orca4/: model.sdf.in
src/multiple_orca/models_test/tur/: model.sdf  model.sdf.in
src/multiple_orca/models_test/tur1/: model.sdf
src/multiple_orca/params/: nav2_params.yaml  sim_mavros_params.yaml  sim_mavros_params_rov1.yaml  sim_mavros_params_rov2.yaml  sim_mavros_params_rov3.yaml  sim_orca_params.yaml
src/multiple_orca/scripts/: attach_cable_anchor.py  gen_model.py  mission_runner.py
src/multiple_orca/worlds/: sand_empty.world
